content/_generated-doc/2.13/config/quarkus-config-group-logging-file-config.adoc

:summaryTableId: quarkus-config-group-logging-file-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-config-group-logging-file-config_quarkus.log.file-file-logging]]link:#quarkus-config-group-logging-file-config_quarkus.log.file-file-logging[File logging]

h|Type
h|Default

a| [[quarkus-config-group-logging-file-config_quarkus.log.file.enable]]`link:#quarkus-config-group-logging-file-config_quarkus.log.file.enable[quarkus.log.file.enable]`

[.description]
--
If file logging should be enabled

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_ENABLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_ENABLE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-config-group-logging-file-config_quarkus.log.file.format]]`link:#quarkus-config-group-logging-file-config_quarkus.log.file.format[quarkus.log.file.format]`

[.description]
--
The log format

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_FORMAT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_FORMAT+++`
endif::add-copy-button-to-env-var[]
--|string 
|`%d{yyyy-MM-dd HH:mm:ss,SSS} %h %N[%i] %-5p [%c{3.}] (%t) %s%e%n`


a| [[quarkus-config-group-logging-file-config_quarkus.log.file.level]]`link:#quarkus-config-group-logging-file-config_quarkus.log.file.level[quarkus.log.file.level]`

[.description]
--
The level of logs to be written into the file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_LEVEL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_LEVEL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`ALL`


a| [[quarkus-config-group-logging-file-config_quarkus.log.file.path]]`link:#quarkus-config-group-logging-file-config_quarkus.log.file.path[quarkus.log.file.path]`

[.description]
--
The name of the file in which logs will be written.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_PATH+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/io/File.html[File]
 
|`quarkus.log`


a| [[quarkus-config-group-logging-file-config_quarkus.log.file.filter]]`link:#quarkus-config-group-logging-file-config_quarkus.log.file.filter[quarkus.log.file.filter]`

[.description]
--
The name of the filter to link to the file handler.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_FILTER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_FILTER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-config-group-logging-file-config_quarkus.log.file.async]]`link:#quarkus-config-group-logging-file-config_quarkus.log.file.async[quarkus.log.file.async]`

[.description]
--
Indicates whether to log asynchronously

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_ASYNC+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_ASYNC+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-config-group-logging-file-config_quarkus.log.file.async.queue-length]]`link:#quarkus-config-group-logging-file-config_quarkus.log.file.async.queue-length[quarkus.log.file.async.queue-length]`

[.description]
--
The queue length to use before flushing writing

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_ASYNC_QUEUE_LENGTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_ASYNC_QUEUE_LENGTH+++`
endif::add-copy-button-to-env-var[]
--|int 
|`512`


a| [[quarkus-config-group-logging-file-config_quarkus.log.file.async.overflow]]`link:#quarkus-config-group-logging-file-config_quarkus.log.file.async.overflow[quarkus.log.file.async.overflow]`

[.description]
--
Determine whether to block the publisher (rather than drop the message) when the queue is full

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_ASYNC_OVERFLOW+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_ASYNC_OVERFLOW+++`
endif::add-copy-button-to-env-var[]
-- a|
`block`, `discard` 
|`block`


a| [[quarkus-config-group-logging-file-config_quarkus.log.file.rotation.max-file-size]]`link:#quarkus-config-group-logging-file-config_quarkus.log.file.rotation.max-file-size[quarkus.log.file.rotation.max-file-size]`

[.description]
--
The maximum file size of the log file after which a rotation is executed.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_ROTATION_MAX_FILE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_ROTATION_MAX_FILE_SIZE+++`
endif::add-copy-button-to-env-var[]
--|MemorySize  link:#memory-size-note-anchor[icon:question-circle[], title=More information about the MemorySize format]
|`10M`


a| [[quarkus-config-group-logging-file-config_quarkus.log.file.rotation.max-backup-index]]`link:#quarkus-config-group-logging-file-config_quarkus.log.file.rotation.max-backup-index[quarkus.log.file.rotation.max-backup-index]`

[.description]
--
The maximum number of backups to keep.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_ROTATION_MAX_BACKUP_INDEX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_ROTATION_MAX_BACKUP_INDEX+++`
endif::add-copy-button-to-env-var[]
--|int 
|`5`


a| [[quarkus-config-group-logging-file-config_quarkus.log.file.rotation.file-suffix]]`link:#quarkus-config-group-logging-file-config_quarkus.log.file.rotation.file-suffix[quarkus.log.file.rotation.file-suffix]`

[.description]
--
File handler rotation file suffix. When used, the file will be rotated based on its suffix. Example fileSuffix: .yyyy-MM-dd

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_ROTATION_FILE_SUFFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_ROTATION_FILE_SUFFIX+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-config-group-logging-file-config_quarkus.log.file.rotation.rotate-on-boot]]`link:#quarkus-config-group-logging-file-config_quarkus.log.file.rotation.rotate-on-boot[quarkus.log.file.rotation.rotate-on-boot]`

[.description]
--
Indicates whether to rotate log files on server initialization. 
You need to either set a `max-file-size` or configure a `file-suffix` for it to work.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_ROTATION_ROTATE_ON_BOOT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_ROTATION_ROTATE_ON_BOOT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


h|[[quarkus-config-group-logging-file-config_quarkus.log.file-handlers-file-handlers]]link:#quarkus-config-group-logging-file-config_quarkus.log.file-handlers-file-handlers[File handlers]

h|Type
h|Default

a| [[quarkus-config-group-logging-file-config_quarkus.log.handler.file.-file-handlers-.enable]]`link:#quarkus-config-group-logging-file-config_quarkus.log.handler.file.-file-handlers-.enable[quarkus.log.handler.file."file-handlers".enable]`

[.description]
--
If file logging should be enabled

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ENABLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ENABLE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-config-group-logging-file-config_quarkus.log.handler.file.-file-handlers-.format]]`link:#quarkus-config-group-logging-file-config_quarkus.log.handler.file.-file-handlers-.format[quarkus.log.handler.file."file-handlers".format]`

[.description]
--
The log format

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__FORMAT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__FORMAT+++`
endif::add-copy-button-to-env-var[]
--|string 
|`%d{yyyy-MM-dd HH:mm:ss,SSS} %h %N[%i] %-5p [%c{3.}] (%t) %s%e%n`


a| [[quarkus-config-group-logging-file-config_quarkus.log.handler.file.-file-handlers-.level]]`link:#quarkus-config-group-logging-file-config_quarkus.log.handler.file.-file-handlers-.level[quarkus.log.handler.file."file-handlers".level]`

[.description]
--
The level of logs to be written into the file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__LEVEL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__LEVEL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`ALL`


a| [[quarkus-config-group-logging-file-config_quarkus.log.handler.file.-file-handlers-.path]]`link:#quarkus-config-group-logging-file-config_quarkus.log.handler.file.-file-handlers-.path[quarkus.log.handler.file."file-handlers".path]`

[.description]
--
The name of the file in which logs will be written.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__PATH+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/io/File.html[File]
 
|`quarkus.log`


a| [[quarkus-config-group-logging-file-config_quarkus.log.handler.file.-file-handlers-.filter]]`link:#quarkus-config-group-logging-file-config_quarkus.log.handler.file.-file-handlers-.filter[quarkus.log.handler.file."file-handlers".filter]`

[.description]
--
The name of the filter to link to the file handler.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__FILTER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__FILTER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-config-group-logging-file-config_quarkus.log.handler.file.-file-handlers-.async]]`link:#quarkus-config-group-logging-file-config_quarkus.log.handler.file.-file-handlers-.async[quarkus.log.handler.file."file-handlers".async]`

[.description]
--
Indicates whether to log asynchronously

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ASYNC+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ASYNC+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-config-group-logging-file-config_quarkus.log.handler.file.-file-handlers-.async.queue-length]]`link:#quarkus-config-group-logging-file-config_quarkus.log.handler.file.-file-handlers-.async.queue-length[quarkus.log.handler.file."file-handlers".async.queue-length]`

[.description]
--
The queue length to use before flushing writing

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ASYNC_QUEUE_LENGTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ASYNC_QUEUE_LENGTH+++`
endif::add-copy-button-to-env-var[]
--|int 
|`512`


a| [[quarkus-config-group-logging-file-config_quarkus.log.handler.file.-file-handlers-.async.overflow]]`link:#quarkus-config-group-logging-file-config_quarkus.log.handler.file.-file-handlers-.async.overflow[quarkus.log.handler.file."file-handlers".async.overflow]`

[.description]
--
Determine whether to block the publisher (rather than drop the message) when the queue is full

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ASYNC_OVERFLOW+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ASYNC_OVERFLOW+++`
endif::add-copy-button-to-env-var[]
-- a|
`block`, `discard` 
|`block`


a| [[quarkus-config-group-logging-file-config_quarkus.log.handler.file.-file-handlers-.rotation.max-file-size]]`link:#quarkus-config-group-logging-file-config_quarkus.log.handler.file.-file-handlers-.rotation.max-file-size[quarkus.log.handler.file."file-handlers".rotation.max-file-size]`

[.description]
--
The maximum file size of the log file after which a rotation is executed.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ROTATION_MAX_FILE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ROTATION_MAX_FILE_SIZE+++`
endif::add-copy-button-to-env-var[]
--|MemorySize  link:#memory-size-note-anchor[icon:question-circle[], title=More information about the MemorySize format]
|`10M`


a| [[quarkus-config-group-logging-file-config_quarkus.log.handler.file.-file-handlers-.rotation.max-backup-index]]`link:#quarkus-config-group-logging-file-config_quarkus.log.handler.file.-file-handlers-.rotation.max-backup-index[quarkus.log.handler.file."file-handlers".rotation.max-backup-index]`

[.description]
--
The maximum number of backups to keep.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ROTATION_MAX_BACKUP_INDEX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ROTATION_MAX_BACKUP_INDEX+++`
endif::add-copy-button-to-env-var[]
--|int 
|`5`


a| [[quarkus-config-group-logging-file-config_quarkus.log.handler.file.-file-handlers-.rotation.file-suffix]]`link:#quarkus-config-group-logging-file-config_quarkus.log.handler.file.-file-handlers-.rotation.file-suffix[quarkus.log.handler.file."file-handlers".rotation.file-suffix]`

[.description]
--
File handler rotation file suffix. When used, the file will be rotated based on its suffix. Example fileSuffix: .yyyy-MM-dd

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ROTATION_FILE_SUFFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ROTATION_FILE_SUFFIX+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-config-group-logging-file-config_quarkus.log.handler.file.-file-handlers-.rotation.rotate-on-boot]]`link:#quarkus-config-group-logging-file-config_quarkus.log.handler.file.-file-handlers-.rotation.rotate-on-boot[quarkus.log.handler.file."file-handlers".rotation.rotate-on-boot]`

[.description]
--
Indicates whether to rotate log files on server initialization. 
You need to either set a `max-file-size` or configure a `file-suffix` for it to work.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ROTATION_ROTATE_ON_BOOT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ROTATION_ROTATE_ON_BOOT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`

|===
[NOTE]
[[memory-size-note-anchor]]
.About the MemorySize format
====
A size configuration option recognises string in this format (shown as a regular expression): `[0-9]+[KkMmGgTtPpEeZzYy]?`.
If no suffix is given, assume bytes.
====
